# DWD-Weather-Data-Converter

./: .gitignore  README.md
.github/workflows/: c-cpp.yml  cmake.yml  cmake_windows.yml
DWDWeatherDataConverter/projects/Qt/: DWDWeatherDataConverter.pro
DWDWeatherDataConverter/projects/cmake_local/: CMakeLists.txt
DWDWeatherDataConverter/resources/: DWDWeatherDataConverter.qrc  DWDWeatherDataConverter.rc
DWDWeatherDataConverter/resources/translations/: DWDWeatherDataConverter_de.qm  DWDWeatherDataConverter_de.ts  release_tr.sh  update_tr.sh
DWDWeatherDataConverter/src/: DWDAboutDialog.cpp  DWDAboutDialog.h  DWDAboutDialog.ui  DWDConstants.cpp  DWDConstants.h  DWDData.cpp  DWDData.h  DWDDelegate.cpp  DWDDescriptonData.cpp  DWDDescriptonData.h  DWDDownloader.cpp  DWDLogWidget.cpp  DWDLogWidget.h  DWDMainWindow.cpp  DWDMainWindow.h  DWDMainWindow.ui  DWDPlotZoomer.h  DWDSettings.cpp  DWDSettings.h  DWDSortFilterProxyModel.cpp  DWDTableModel.cpp  DWDTableModel.h  DWDTimePlotPicker.cpp  DWDTimePlotPicker.h  main.cpp
doc/documentation/: Documentation_DWDWeatherDataConverter.adoc  build.sh
docs/Documentation_DWDWeatherDataConverter/: index.html
resources/translations/: linguist_de.sh  release_tr.sh  update_tr.sh
